--- a/css/styles.css
+++ b/css/styles.css
@@ -7,3 +7,8 @@ body {
     font-size: 1rem;
     background-color: lightskyblue;
 }
+
+footer {
+    padding: 2rem 1rem;
+    background-color: lightgray;
+}
