--- a/css/styles.css
+++ b/css/styles.css
@@ -5,10 +5,5 @@ html {
 body {
     font-family: Arial, Helvetica, sans-serif;
     font-size: 1rem;
-    background-color: lightskyblue;
-}
-
-footer {
-    padding: 2rem 1rem;
-    background-color: lightgray;
+    text-align: center;
 }
