--- a/css/styles.css
+++ b/css/styles.css
@@ -1,9 +1,63 @@
 html {
-    font-size: 16px;
+  font-size: 16px;
 }
 
 body {
-    font-family: Arial, Helvetica, sans-serif;
-    font-size: 1rem;
-    text-align: center;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin: 0;
+  height: 100vh;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 1rem;
+  text-align: center;
+}
+
+#btnPopup {
+  font-size: 1.25rem;
+  font-weight: bold;
+  padding: 1rem 2rem;
+  border: 1px solid #333333;
+  border-radius: 1.5rem;
+  background-color: #ffffff;
+  box-shadow: 2px 2px 4px #cfcfcf;
+  cursor: pointer;
+}
+
+#popup {
+  display: none;
+  position: absolute;
+  left: 0;
+  top: 0;
+  align-items: center;
+  justify-content: center;
+  width: 100vw;
+  height: 100vh;
+  background-color: rgba(255, 255, 255, 0.75);
+}
+
+#popup .popup_body {
+  position: relative;
+  padding: 3rem 1.5rem;
+  width: 50%;
+  background-color: #ffffff;
+  border: 2px solid #333333;
+  border-radius: 1.5rem;
+  box-shadow: 2px 2px 4px #cfcfcf;
+}
+
+#popup .popup_body .close {
+  position: absolute;
+  top: 1rem;
+  right: 1rem;
+  font-size: 1.5rem;
+  font-weight: bold;
+  border: none;
+  background: none;
+  cursor: pointer;
+}
+
+#popup .popup_body p {
+  font-size: 1.25rem;
+  font-weight: bold;
 }
