--- a/css/styles.css
+++ b/css/styles.css
@@ -1,9 +1,50 @@
 html {
-    font-size: 16px;
+  font-size: 16px;
 }
 
 body {
-    font-family: Arial, Helvetica, sans-serif;
-    font-size: 1rem;
-    text-align: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  margin: 0;
+  height: 100vh;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 1rem;
+}
+
+.form {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.form label {
+  margin: 0 0.25rem 0.5rem 0;
+  font-size: 1.25rem;
+  font-weight: bold;
+}
+
+.form input {
+  box-sizing: border-box;
+  margin-bottom: 1rem;
+  padding: 1rem 2rem;
+  width: 100%;
+  font-size: 1.25rem;
+  text-align: center;
+  border: 1px solid #333333;
+  border-radius: 0.5rem;
+  background-color: #ffffff;
+}
+
+.form button {
+  padding: 1rem 2rem;
+  width: 100%;
+  font-size: 1.25rem;
+  font-weight: bold;
+  border: 1px solid #333333;
+  border-radius: 1.5rem;
+  background-color: #ffffff;
+  box-shadow: 2px 2px 4px #cfcfcf;
+  cursor: pointer;
 }
