--- a/css/styles.css
+++ b/css/styles.css
@@ -4,13 +4,13 @@ html {
 
 body {
   display: flex;
+  flex-direction: column;
   align-items: center;
   justify-content: center;
   margin: 0;
   height: 100vh;
   font-family: Arial, Helvetica, sans-serif;
   font-size: 1rem;
-  text-align: center;
 }
 
 #btnPopup {
@@ -40,6 +40,7 @@ body {
   position: relative;
   padding: 3rem 1.5rem;
   width: 50%;
+  text-align: center;
   background-color: #ffffff;
   border: 2px solid #333333;
   border-radius: 1.5rem;
