--- a/css/styles.css
+++ b/css/styles.css
@@ -13,19 +13,24 @@ body {
   font-size: 1rem;
 }
 
-.form {
+form {
   display: flex;
   flex-direction: column;
   align-items: center;
 }
 
-.form label {
+.form_group {
+  margin-bottom: 1rem;
+  text-align: center;
+}
+
+form label {
   margin: 0 0.25rem 0.5rem 0;
   font-size: 1.25rem;
   font-weight: bold;
 }
 
-.form input {
+form input {
   box-sizing: border-box;
   margin-bottom: 1rem;
   padding: 1rem 2rem;
@@ -37,7 +42,14 @@ body {
   background-color: #ffffff;
 }
 
-.form button {
+form .error {
+  margin: -0.5rem 0 1rem;
+  font-size: 0.9rem;
+  font-weight: bold;
+  color: red;
+}
+
+form button {
   padding: 1rem 2rem;
   width: 100%;
   font-size: 1.25rem;
@@ -47,4 +59,8 @@ body {
   background-color: #ffffff;
   box-shadow: 2px 2px 4px #cfcfcf;
   cursor: pointer;
+}
+
+#texte {
+  color: green;
 }
